--- a/css/agency.css
+++ b/css/agency.css
@@ -771,3 +771,7 @@ body {
 .control-group.success .fileupload .uneditable-input{color:#468847;border-color:#468847;}
 .control-group.success .fileupload .fileupload-preview{color:#468847;}
 .control-group.success .fileupload .thumbnail{border-color:#468847;}
+input:focus::-webkit-input-placeholder 
+{
+    color: transparent;
+}
