--- a/css/agency.css
+++ b/css/agency.css
@@ -775,3 +775,9 @@ input:focus::-webkit-input-placeholder
 {
     color: transparent;
 }
+.bg-yellow {
+  background: #ffffe6;
+}
+.modal-content{
+  background: #eee;
+}
