Remove yellow bg

--- a/css/agency.css
+++ b/css/agency.css
@@ -775,9 +775,9 @@ input:focus::-webkit-input-placeholder
 {
     color: transparent;
 }
-.bg-yellow {
+/*.bg-yellow {
   background: #ffffe6;
 }
 .modal-content{
   background: #eee;
-}
+}*/
